# morphotag_ba2_ui

./: README.md  app.py  app_entry.py  app_qt.py  ba2_ui.spec  make_win_exe_qt.bat  pyproject.toml  ui_qt.spec
cli/: morphotag-build-df.py  morphotag-clean.py  morphotag-diagnose.py  morphotag-transcribe.py
morphotag/: __init__.py  clean.py  diagnose.py  parser.py  utils.py
